<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/widthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/width_text_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/widthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter Width"
        android:inputType="numberDecimal"
        android:text="@string/width_input"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/height_text_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter Height"
        android:inputType="numberDecimal"
        android:text="@string/height_input"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widthEditText" />

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/area_text_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <TextView
        android:id="@+id/areaCalculationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/area_calculation"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/perimeterCalculatedTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <TextView
        android:id="@+id/perimeterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/perimeter_text_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/perimeterCalculatedTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/perimeterCalculatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:text="@string/perimeter_calculation"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/perimeterTextView"
        app:layout_constraintTop_toBottomOf="@+id/areaCalculationTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>